--- a/src/rtz/rtz/Properties/Resources.resx
+++ b/src/rtz/rtz/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="RTZ_Schema_version_1_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>RTZ Schema version 1_0.xsd;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="RTZ_Schema_version_1_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>RTZ Schema version 1_1.xsd;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
 </root>
