--- a/src/rtz/rtz/Properties/Resources.resx
+++ b/src/rtz/rtz/Properties/Resources.resx
@@ -124,4 +124,7 @@
   <data name="RTZ_Schema_version_1_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>RTZ Schema version 1_1.xsd;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="stm_extensions_29032017" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>stm_extensions_29032017.xsd;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
 </root>
