Users/andyn/schema12 leg extensions (#14)
* Some test files around whether or not to go to schema 12 with extensions allowed on the leg elements. Involves a tentative 1.2 schema which rippled to an even more tentative STM schema.

* Catch exceptions from XSD validation as Errors related to a specific RTZ file.

Update many test files mostly changing version 1.1 --> 1.2

Rearrange sample files in light of 1.1 --> 1.2 and the addition of "leg extensions"

Change name of unofficial STM schema.

* Bump version number

Co-authored-by: Andy Nibbs <andrewn@chersoft.com>

--- a/src/rtz/rtz/Properties/Resources.resx
+++ b/src/rtz/rtz/Properties/Resources.resx
@@ -124,7 +124,13 @@
   <data name="RTZ_Schema_version_1_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>RTZ Schema version 1_1.xsd;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="RTZ_Schema_version_1_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>RTZ Schema version 1_2.xsd;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
   <data name="stm_extensions_29032017" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>stm_extensions_29032017.xsd;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="stm_extensions_02042020_unofficial" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>stm_extensions_02042020_unofficial.xsd;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
 </root>
